Bug 191530 - [WebAuthn] Incorporate more detailed UnknownError messages for LocalAuthenticator
Summary: [WebAuthn] Incorporate more detailed UnknownError messages for LocalAuthentic...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jiewen Tan
URL:
Keywords: InRadar
Depends on:
Blocks: 182769
  Show dependency treegraph
 
Reported: 2018-11-11 18:23 PST by Jiewen Tan
Modified: 2020-01-24 13:59 PST (History)
5 users (show)

See Also:


Attachments
Patch (12.27 KB, patch)
2020-01-21 16:18 PST, Jiewen Tan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jiewen Tan 2018-11-11 18:23:45 PST
Incorporate more detailed UnknownError messages for LocalAuthenticator for testing since all UnknownError will be surpassed to NotAllowedError, i.e. operation timeout for production.
Comment 1 Jiewen Tan 2020-01-21 16:18:20 PST
Created attachment 388366 [details]
Patch
Comment 2 Brent Fulgham 2020-01-21 16:26:15 PST
Comment on attachment 388366 [details]
Patch

r=me
Comment 3 Jiewen Tan 2020-01-21 16:42:15 PST
Comment on attachment 388366 [details]
Patch

Thanks Brent for r+ this patch.
Comment 4 WebKit Commit Bot 2020-01-21 17:26:02 PST
Comment on attachment 388366 [details]
Patch

Clearing flags on attachment: 388366

Committed r254894: <https://trac.webkit.org/changeset/254894>
Comment 5 WebKit Commit Bot 2020-01-21 17:26:03 PST
All reviewed patches have been landed.  Closing bug.
Comment 6 Radar WebKit Bug Importer 2020-01-21 17:27:15 PST
<rdar://problem/58781040>
Comment 7 Jiewen Tan 2020-01-23 22:38:10 PST
A follow up to add more details is here:
Committed r255056: <https://trac.webkit.org/changeset/255056>
Comment 8 Jiewen Tan 2020-01-24 13:59:05 PST
A follow up on r255056:
Committed r255093: <https://trac.webkit.org/changeset/255093>