[WebAuthn] Incorporate more detailed UnknownError messages for LocalAuthenticator https://bugs.webkit.org/show_bug.cgi?id=191530

Reviewed by Brent Fulgham.

Source/WebKit:

This patch replaces UnknownError messages within LocalAuthenticator with the LOG_ERROR
messages. At the meantime, it enhances MockLocalConnection::getAttestation to return
errors instead of assertions.

* UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticator::makeCredential):
(WebKit::LocalAuthenticator::continueMakeCredentialAfterUserConsented):
(WebKit::LocalAuthenticator::continueMakeCredentialAfterAttested):
(WebKit::LocalAuthenticator::getAssertion):
(WebKit::LocalAuthenticator::continueGetAssertionAfterUserConsented):
* UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
(WebKit::MockLocalConnection::getAttestation const):

LayoutTests:

* http/wpt/webauthn/public-key-credential-create-failure-local.https.html:


Canonical link: https://commits.webkit.org/219627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254894 268f45cc-cd09-0410-ab3c-d52691b4dbfc