Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm
@@ -131,7 +131,7 @@ void LocalAuthenticator::makeCredential()
         OSStatus status = SecItemCopyMatching((__bridge CFDictionaryRef)query, &attributesArrayRef);
         if (status && status != errSecItemNotFound) {
             LOG_ERROR("Couldn't query Keychain: %d", status);
-            receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+            receiveRespond(ExceptionData { UnknownError, makeString("Couldn't query Keychain: ", status) });
             return;
         }
         auto retainAttributesArray = adoptCF(attributesArrayRef);
@@ -186,8 +186,8 @@ void LocalAuthenticator::continueMakeCredentialAfterUserConsented(LocalConnectio
     };
     OSStatus status = SecItemDelete((__bridge CFDictionaryRef)deleteQuery);
     if (status && status != errSecItemNotFound) {
-        LOG_ERROR("Couldn't detele older credential: %d", status);
-        receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+        LOG_ERROR("Couldn't delete older credential: %d", status);
+        receiveRespond(ExceptionData { UnknownError, makeString("Couldn't delete older credential: ", status) });
         return;
     }
 
@@ -211,7 +211,7 @@ void LocalAuthenticator::continueMakeCredentialAfterAttested(SecKeyRef privateKe
 
     if (error) {
         LOG_ERROR("Couldn't attest: %@", error);
-        receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+        receiveRespond(ExceptionData { UnknownError, makeString("Couldn't attest: ", String(error.localizedDescription)) });
         return;
     }
     // Attestation Certificate and Attestation Issuing CA
@@ -249,7 +249,7 @@ void LocalAuthenticator::continueMakeCredentialAfterAttested(SecKeyRef privateKe
         OSStatus status = SecItemCopyMatching((__bridge CFDictionaryRef)credentialIdQuery, &attributesRef);
         if (status) {
             LOG_ERROR("Couldn't get Credential ID: %d", status);
-            receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+            receiveRespond(ExceptionData { UnknownError, makeString("Couldn't get Credential ID: ", status) });
             return;
         }
         auto retainAttributes = adoptCF(attributesRef);
@@ -274,7 +274,7 @@ void LocalAuthenticator::continueMakeCredentialAfterAttested(SecKeyRef privateKe
         status = SecItemUpdate((__bridge CFDictionaryRef)updateQuery, (__bridge CFDictionaryRef)updateParams);
         if (status) {
             LOG_ERROR("Couldn't update the Keychain item: %d", status);
-            receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+            receiveRespond(ExceptionData { UnknownError, makeString("Couldn't update the Keychain item: ", status) });
             return;
         }
     }
@@ -295,7 +295,7 @@ void LocalAuthenticator::continueMakeCredentialAfterAttested(SecKeyRef privateKe
             auto retainError = adoptCF(errorRef);
             if (errorRef) {
                 LOG_ERROR("Couldn't export the public key: %@", (NSError*)errorRef);
-                receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+                receiveRespond(ExceptionData { UnknownError, makeString("Couldn't export the public key: ", String(((NSError*)errorRef).localizedDescription)) });
                 return;
             }
             ASSERT(((NSData *)publicKeyDataRef.get()).length == (1 + 2 * ES256FieldElementLength)); // 04 | X | Y
@@ -327,7 +327,7 @@ void LocalAuthenticator::continueMakeCredentialAfterAttested(SecKeyRef privateKe
             auto retainError = adoptCF(errorRef);
             if (errorRef) {
                 LOG_ERROR("Couldn't generate the signature: %@", (NSError*)errorRef);
-                receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+                receiveRespond(ExceptionData { UnknownError, makeString("Couldn't generate the signature: ", String(((NSError*)errorRef).localizedDescription)) });
                 return;
             }
             signature = toVector((NSData *)signatureRef.get());
@@ -379,7 +379,7 @@ void LocalAuthenticator::getAssertion()
     OSStatus status = SecItemCopyMatching((__bridge CFDictionaryRef)query, &attributesArrayRef);
     if (status && status != errSecItemNotFound) {
         LOG_ERROR("Couldn't query Keychain: %d", status);
-        receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+        receiveRespond(ExceptionData { UnknownError, makeString("Couldn't query Keychain: ", status) });
         return;
     }
     auto retainAttributesArray = adoptCF(attributesArrayRef);
@@ -461,7 +461,7 @@ void LocalAuthenticator::continueGetAssertionAfterUserConsented(LocalConnection:
         OSStatus status = SecItemCopyMatching((__bridge CFDictionaryRef)query, &privateKeyRef);
         if (status) {
             LOG_ERROR("Couldn't get the private key reference: %d", status);
-            receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+            receiveRespond(ExceptionData { UnknownError, makeString("Couldn't get the private key reference: ", status) });
             return;
         }
         auto privateKey = adoptCF(privateKeyRef);
@@ -475,7 +475,7 @@ void LocalAuthenticator::continueGetAssertionAfterUserConsented(LocalConnection:
         auto retainError = adoptCF(errorRef);
         if (errorRef) {
             LOG_ERROR("Couldn't generate the signature: %@", (NSError*)errorRef);
-            receiveRespond(ExceptionData { UnknownError, "Unknown internal error."_s });
+            receiveRespond(ExceptionData { UnknownError, makeString("Couldn't generate the signature: ", String(((NSError*)errorRef).localizedDescription)) });
             return;
         }
         signature = toVector((NSData *)signatureRef.get());
