Source/WebKit/UIProcess/WebAuthentication/Mock/MockLocalConnection.mm
@@ -73,7 +73,7 @@ void MockLocalConnection::getAttestation(const String& rpId, const String& usern
     RunLoop::main().dispatch([configuration = m_configuration, rpId, username, hash, callback = WTFMove(callback)]() mutable {
         ASSERT(configuration.local);
         if (!configuration.local->acceptAttestation) {
-            callback(NULL, NULL, [NSError errorWithDomain:NSOSStatusErrorDomain code:-1 userInfo:nil]);
+            callback(NULL, NULL, [NSError errorWithDomain:@"WebAuthentication" code:-1 userInfo:@{ NSLocalizedDescriptionKey: @"The operation couldn't complete." }]);
             return;
         }
 
@@ -89,7 +89,10 @@ void MockLocalConnection::getAttestation(const String& rpId, const String& usern
             (__bridge CFDictionaryRef)options,
             &errorRef
         ));
-        ASSERT(!errorRef);
+        if (errorRef) {
+            callback(NULL, NULL, (NSError *)errorRef);
+            return;
+        }
 
         // Mock what DeviceIdentity would do.
         String label = makeString(username, "@", rpId, "-rk-ucrt");
@@ -99,7 +102,10 @@ void MockLocalConnection::getAttestation(const String& rpId, const String& usern
             (id)kSecAttrLabel: (id)label,
         };
         OSStatus status = SecItemAdd((__bridge CFDictionaryRef)addQuery, NULL);
-        ASSERT_UNUSED(status, !status);
+        if (status) {
+            callback(NULL, NULL, [NSError errorWithDomain:@"WebAuthentication" code:status userInfo:@{ NSLocalizedDescriptionKey: @"Couldn't add the key to the keychain." }]);
+            return;
+        }
 
         auto attestationCertificate = adoptCF(SecCertificateCreateWithData(NULL, (__bridge CFDataRef)adoptNS([[NSData alloc] initWithBase64EncodedString:configuration.local->userCertificateBase64 options:NSDataBase64DecodingIgnoreUnknownCharacters]).get()));
         auto attestationIssuingCACertificate = adoptCF(SecCertificateCreateWithData(NULL, (__bridge CFDataRef)adoptNS([[NSData alloc] initWithBase64EncodedString:configuration.local->intermediateCACertificateBase64 options:NSDataBase64DecodingIgnoreUnknownCharacters]).get()));
